# camera_imu_lidar_calibration

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: C_T_L.txt  C_T_L_concatanated_2022_01_28_15_06_51.txt  C_T_L_concatanated_2022_01_28_15_11_20.txt  C_T_L_concatanated_2022_01_28_15_15_06.txt  C_T_L_concatanated_2022_01_28_15_30_47.txt  C_T_L_final.txt  C_T_L_final_0.txt  C_T_L_final_2.txt  C_T_L_final_3_kalibr.txt  I_T_C_final.txt  I_T_C_init.txt  I_T_C_kalibr.txt  I_T_L_final.txt  camera_imu_calib_dt.csv  camera_imu_calib_extrinsics.csv  compareITC.m  compareWithKalibr.m  daisyChainTF.m  differencebwIndividualAndJointCalibration.m  displayAllITC.m  imu_bias.csv  imu_trajectory.csv  imu_velocity.csv  kalibrResults.m  lidar_imu_calib_dt.csv  lidar_imu_calib_extrinsics.csv  lo_trajectory.csv  plotBias.m  plotCalib_camera_imu.m  plotCalib_lidar_imu.m  plotResidual_cameraimulidar.m  plotTrajectory.m  plotVelocity.m  pylon_calib.yaml  residual_cameraimulidar.csv  resultsfromcameraimucalibration.m
data/cam_imu_results/: I_T_C_2022_01_28_15_11_20.txt  I_T_C_2022_01_28_15_15_06.txt  I_T_C_2022_01_28_15_20_21.txt
data/cam_imu_results/mocalResidual/: I_T_C_2022_01_28_15_06_51.txt  I_T_C_2022_01_28_15_11_20.txt  I_T_C_2022_01_28_15_15_06.txt  I_T_C_2022_01_28_15_20_21.txt  I_T_C_2022_01_28_15_30_47.txt
data/cam_imu_results/repErrResidual/: I_T_C_2022_01_28_15_06_51.txt  I_T_C_2022_01_28_15_30_47.txt
data/camera_imu_lidar_results/: C_T_L_final_2022_01_28_15_06_51.txt  C_T_L_final_2022_01_28_15_11_20.txt  C_T_L_final_2022_01_28_15_15_06.txt  C_T_L_final_2022_01_28_15_20_21.txt  C_T_L_final_2022_01_28_15_30_47.txt  I_T_C_final_2022_01_28_15_06_51.txt  I_T_C_final_2022_01_28_15_11_20.txt  I_T_C_final_2022_01_28_15_15_06.txt  I_T_C_final_2022_01_28_15_30_47.txt  I_T_L_final_2022_01_28_15_06_51.txt  I_T_L_final_2022_01_28_15_11_20.txt  I_T_L_final_2022_01_28_15_15_06.txt  I_T_L_final_2022_01_28_15_20_21.txt  I_T_L_final_2022_01_28_15_30_47.txt
data/kalibr_results/: I_T_C_kalibr_2022_01_28_15_06_51.txt  I_T_C_kalibr_2022_01_28_15_11_20.txt  I_T_C_kalibr_2022_01_28_15_15_06.txt  I_T_C_kalibr_2022_01_28_15_30_47.txt
data/lidar_imu_results/: I_T_L_2022_01_28_15_06_51.txt  I_T_L_2022_01_28_15_11_20.txt  I_T_L_2022_01_28_15_15_06.txt  I_T_L_2022_01_28_15_20_21.txt  I_T_L_2022_01_28_15_30_47.txt
launch/: camera_imu_lidar_calibration.launch  camera_imu_lidar_calibration_bagcreater.launch  ros_calib_init.launch  ros_ndt_lodom.launch
src/: ros_camera_imu_lidar_calibration_bag_generator.cpp  ros_camera_imu_lidar_calibration_test.cpp
src/core/: calibManager.cpp  calibManager.h  calibManagerOptions.h
src/init/: InertialInitializer.cpp  InertialInitializer.h
src/relpose/: relativePose.h
src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
src/track/: cameraPoseTracking.cpp  cameraPoseTracking.h  lidarOdometry.cpp  lidarOdometry.h  lidarPlaneDetector.cpp  lidarPlaneDetector.h
src/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
src/update/: UpdaterCameraLidarConstraint.cpp  UpdaterCameraLidarConstraint.h  UpdaterCameraTracking.cpp  UpdaterCameraTracking.h  UpdaterLidarOdometry.cpp  UpdaterLidarOdometry.h  UpdaterOptions.h
src/utils/: color.h  eigen_utils.h  math_utils.h  parse_ros.h  pcl_utils.h  quat_ops.h
